[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "media-adapter"
version = "0.1.0"
description = "A multi-platform social media data crawler with LLM integration capabilities"
readme = "README.md"
license = {text = "NON-COMMERCIAL LEARNING LICENSE 1.1"}
requires-python = ">=3.10"
authors = [
    {name = "relakkes", email = "relakkes@gmail.com"}
]
keywords = [
    "crawler",
    "scraper",
    "social-media",
    "xiaohongshu",
    "douyin",
    "kuaishou",
    "bilibili",
    "weibo",
    "tieba",
    "zhihu",
    "llm",
    "langchain"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "playwright>=1.40.0",
    "aiofiles>=23.0.0",
    "sqlalchemy>=2.0.0",
    "asyncmy>=0.2.9",
    "aiosqlite>=0.19.0",
    "asyncpg>=0.29.0",
    "typer>=0.9.0",
    "typing_extensions>=4.8.0",
    "openpyxl>=3.1.0",
    "jieba>=0.42.0",
    "matplotlib>=3.8.0",
    "wordcloud>=1.9.0",
    "greenlet>=3.0.0",
    "httpx>=0.25.0",
    "numpy>=1.26.0",
    "opencv-python>=4.8.0",
    "pydantic>=2.5.0",
    "tenacity>=8.2.0",
    "aiomysql>=0.2.0",
    "redis>=5.0.0",
    "motor>=3.3.0",
    "pyhumps>=3.8.0",
    "PyExecJS>=1.5.0",
    "pandas>=2.1.0",
    "parsel>=1.8.0",
    "Pillow>=10.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.6.0",
    "ruff>=0.1.0",
]
langchain = [
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
]
api = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]
all = [
    "media-adapter[dev,langchain,api]",
]

[project.urls]
Homepage = "https://github.com/NanmiCoder/MediaCrawler"
Repository = "https://github.com/NanmiCoder/MediaCrawler"
Documentation = "https://github.com/NanmiCoder/MediaCrawler#readme"
Issues = "https://github.com/NanmiCoder/MediaCrawler/issues"

[project.scripts]
media-adapter = "media_adapter.app:run_cli"
media-adapter-test = "media_adapter.examples.deep_test:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["media_adapter*"]
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
media_adapter = [
    "py.typed",
    "resources/**/*",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | venv_new
    | _build
    | buck-out
    | build
    | dist
    | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
skip = [".git", "__pycache__", "venv_new", ".venv", "build", "dist"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "venv_new",
    ".venv",
    "build",
    "dist",
]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
    ".git",
    "__pycache__",
    "venv_new",
    ".venv",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["media_adapter"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv_new/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
